added executeQuery method in SqlQuery for simple selects + other improvements